--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -95,11 +95,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_model:int, h:int, dropout:float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.h = h\n",
+    "        assert d_model % h == 0 \n",
+    "\n",
+    "        self.d_k = d_model // h\n",
+    "        self.w_q = nn.Linear(d_model, d_model)\n",
+    "        self.w_k = nn.Linear(d_model, d_model)\n",
+    "        self.w_v = nn.Linear(d_model, d_model)\n",
+    "\n",
+    "        self.w_o = nn.Linear(d_model, d_model)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def attention(query, key, value, mask, dropout:nn.Dropout):\n",
+    "        d_k = query.shape[-1]\n",
+    "        \n",
+    "        attention_scores = (query @ key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+    "        if mask is not None:\n",
+    "            attention_scores.masked_fill_(mask == 0, -1e9)\n",
+    "        attention_scores = attention_scores.softmax(dim=-1)\n",
+    "        if dropout is not None:\n",
+    "            attention_scores = dropout(attention_scores)\n",
+    "\n",
+    "        return (attention_scores @ value), attention_scores\n",
+    "        \n",
+    "\n",
+    "    def forward(self, q, k, v, mask):\n",
+    "        query = self.w_q(q)\n",
+    "        key = self.w_k(k)\n",
+    "        value = self.w_v(v)\n",
+    "\n",
+    "        query = query.view(query.shape[0], query.shape[1], self.h, self.d_k).transpose(1, 2)\n",
+    "        key = key.view(query.shape[0], query.shape[1], self.h, self.d_k).transpose(1, 2)\n",
+    "        value = value.view(query.shape[0], query.shape[1], self.h, self.d_k).transpose(1, 2)\n",
+    "\n",
+    "        x, self.attention_scores = MultiHeadAttention.attention(query, key, value, mask, self.dropout)\n",
+    "\n",
+    "        x = x.transpose(1, 2).contiguous().view(x.shape[0], -1, self.h * self.d_k)\n",
+    "\n",
+    "        return self.w_o(x)"
    ]
   }
  ],
