--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -143,6 +143,59 @@
     "\n",
     "        return self.w_o(x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualConnection(nn.Module):\n",
+    "    def __init__(self, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, sublayer):\n",
+    "        return x + self.dropout(sublayer(self.norm(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "    def __init__(self, self_attention_block: MultiHeadAttention, feed_forward_block: FeedForwardBlock, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.self_attention_block = self_attention_block\n",
+    "        self.feed_forward_block = feed_forward_block\n",
+    "        self.residual_connection = nn.ModuleList([ResidualConnection(dropout)] for _ in range(2))\n",
+    "\n",
+    "    def forward(self, x, src_mask):\n",
+    "        x = self.residual_connection[0](x, lambda x: self.self_attention_block(x, x, x, src_mask))\n",
+    "        x = self.residual_connection[1](x, self.feed_forward_block)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, layers: nn.ModuleList) -> None:\n",
+    "        super().__init__()\n",
+    "        self.layers = layers\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, mask)\n",
+    "        return self.norm(x)"
+   ]
   }
  ],
  "metadata": {
