--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,60 @@
     "        for layer in self.layers:\n",
     "            x = layer(x, mask)\n",
     "        return self.norm(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderBlock(nn.Module):\n",
+    "    def __init__(self, self_attention_block:MultiHeadAttention, cross_attention_block:MultiHeadAttention, feed_forward_block:FeedForwardBlock, dropout:float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.self_attention_block = self_attention_block\n",
+    "        self.cross_attention_block = cross_attention_block\n",
+    "        self.feed_forward_block = feed_forward_block\n",
+    "        self.residual_connections = nn.Module([ResidualConnection(dropout) for _ in range(3)])\n",
+    "\n",
+    "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+    "        x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, tgt_mask))\n",
+    "        x = self.residual_connections[1](x, lambda x: self.cross_attention_block(x, encoder_output, encoder_output, src_mask))\n",
+    "        x = self.residual_connections[2](x, self.feed_forward_block)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, layers: nn.ModuleList) -> None:\n",
+    "        super().__init__()\n",
+    "        self.layers = layers\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, encoder_output, src_mask, tgt_mask)\n",
+    "        return self.norm(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProjectionLayer(nn.Module):\n",
+    "    def __init__(self, d_model: int, vocab_size: int) -> None:\n",
+    "        super().__init__()\n",
+    "        self.proj = nn.Linear(d_model, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return torch.log_softmax(self.proj(x), dim=-1)"
    ]
   }
  ],
