--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -250,6 +250,78 @@
     "    def forward(self, x):\n",
     "        return torch.log_softmax(self.proj(x), dim=-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, encoder: Encoder, decoder: Decoder, src_embed: InputEmbedding, tgt_embed: InputEmbedding, src_pos: PositionalEncoding, tgt_pos: PositionalEncoding, projection_layer: ProjectionLayer):\n",
+    "        super().__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.src_embed = src_embed\n",
+    "        self.tgt_embed = tgt_embed\n",
+    "        self.src_pos = src_pos\n",
+    "        self.tgt_pos = tgt_pos\n",
+    "        self.projection_layer = projection_layer\n",
+    "\n",
+    "    def encode(self, src, src_mask):\n",
+    "        src = self.src_embed(src)\n",
+    "        src = self.src_pos(src)\n",
+    "        return self.encoder(src, src_mask)\n",
+    "    \n",
+    "    def decode(self, encoder_output, src_mask, tgt, tgt_mask):\n",
+    "        tgt = self.tgt_embed(tgt)\n",
+    "        tgt = self.tgt_pos(tgt)\n",
+    "        return self.decoder(tgt, encoder_output, src_mask, tgt_mask)\n",
+    "    \n",
+    "    def project(self, x):\n",
+    "        return self.projection_layer(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_transformer(src_vocab_size: int, tgt_vocab_size: int, src_seq_len: int, tgt_seq_len: int, d_model: int = 512, N: int = 6, h: int = 8, dropout: float = 0.1, d_ff: int = 2048) -> Transformer:\n",
+    "    src_embed = InputEmbedding(d_model, src_vocab_size)\n",
+    "    tgt_embed = InputEmbedding(d_model, tgt_vocab_size)\n",
+    "    src_pos = PositionalEncoding(d_model, src_seq_len, dropout)\n",
+    "    tgt_pos = PositionalEncoding(d_model, tgt_seq_len, dropout)\n",
+    "\n",
+    "    encoder_blocks = []\n",
+    "    for _ in range(N):\n",
+    "        encoder_self_attention_block = MultiHeadAttention(d_model, h, dropout)\n",
+    "        feed_forward_block = FeedForwardBlock(d_model, d_ff, dropout)\n",
+    "        encoder_block = EncoderBlock(encoder_self_attention_block, feed_forward_block, dropout)\n",
+    "        encoder_blocks.append(encoder_block)\n",
+    "\n",
+    "    decoder_blocks = []\n",
+    "    for _ in range(N):\n",
+    "        decoder_self_attention_block = MultiHeadAttention(d_model, h, dropout)\n",
+    "        decoder_cross_attention_block = MultiHeadAttention(d_model, h, dropout)\n",
+    "        feed_forward_block = FeedForwardBlock(d_model, d_ff, dropout)\n",
+    "        decoder_block = DecoderBlock(decoder_self_attention_block, decoder_cross_attention_block, feed_forward_block, dropout)\n",
+    "        decoder_blocks.append(decoder_block)\n",
+    "\n",
+    "    encoder = Encoder(nn.ModuleList(encoder_blocks))\n",
+    "    decoder = Decoder(nn.ModuleList(decoder_blocks))\n",
+    "\n",
+    "    projection_layer = ProjectionLayer(d_model, tgt_vocab_size)\n",
+    "\n",
+    "    transformer = Transformer(encoder, decoder, src_embed, tgt_embed, src_pos, tgt_pos, projection_layer)\n",
+    "\n",
+    "    for p in transformer.parameters():\n",
+    "        if p.dim() > 1:\n",
+    "            nn.init.xavier_uniform_(p)\n",
+    "\n",
+    "    return transformer"
+   ]
   }
  ],
  "metadata": {
