--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "        self.self_attention_block = self_attention_block\n",
     "        self.cross_attention_block = cross_attention_block\n",
     "        self.feed_forward_block = feed_forward_block\n",
-    "        self.residual_connections = nn.Module([ResidualConnection(dropout) for _ in range(3)])\n",
+    "        self.residual_connections = nn.ModuleList([ResidualConnection(dropout) for _ in range(3)])\n",
     "\n",
     "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
     "        x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, tgt_mask))\n",
